[tool.poetry]
name = "aws-glue-libs"
version = "3.0.0"
description = "AWS Glue libraries"
authors = ["Nobody <nobody@nodomain.notld>"]

packages = [
  { include = "awsglue" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
pyspark = "^3.1.2"
botocore = "^1.21.60"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
